--- a/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
+++ b/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trainer.cs" />
+    <Compile Include="Training.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
