--- a/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
+++ b/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subscription.cs" />
     <Compile Include="Trainer.cs" />
     <Compile Include="Training.cs" />
   </ItemGroup>
