Add subcription and member model wrappers

--- a/Gyman/Gyman.PresentationLayer/Gyman.PresentationLayer.csproj
+++ b/Gyman/Gyman.PresentationLayer/Gyman.PresentationLayer.csproj
@@ -104,8 +104,10 @@
     </Compile>
     <Compile Include="Views\Services\DialogMessageService.cs" />
     <Compile Include="Views\Services\IDialogMessageService.cs" />
+    <Compile Include="Wrappers\MemberWrapper.cs" />
     <Compile Include="Wrappers\ModelWrapper.cs" />
     <Compile Include="Wrappers\NotifyDataErrorInfoBase.cs" />
+    <Compile Include="Wrappers\SubscriptionWrapper.cs" />
     <Compile Include="Wrappers\TrainerWrapper.cs" />
     <Compile Include="Wrappers\TrainingWrapper.cs" />
   </ItemGroup>
