--- a/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
+++ b/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GymanDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
