--- a/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
+++ b/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
@@ -52,6 +52,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GymanDbContext.cs" />
+    <Compile Include="Migrations\202102061330267_Initial.cs" />
+    <Compile Include="Migrations\202102061330267_Initial.designer.cs">
+      <DependentUpon>202102061330267_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -64,6 +68,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202102061330267_Initial.resx">
+      <DependentUpon>202102061330267_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
