--- a/Gyman/Gyman.DataAccessLayer/App.config
+++ b/Gyman/Gyman.DataAccessLayer/App.config
@@ -7,7 +7,7 @@
 	</configSections>
 	<connectionStrings>
 		<add name="GymanDb"
-			 connectionString="Data Source=DESKTOP-6PHH8U0\SQLEXPRESS;Initial Catalog=FriendOrganizer;Integrated Security=True"
+			 connectionString="Data Source=DESKTOP-6PHH8U0\SQLEXPRESS;Initial Catalog=Gyman;Integrated Security=True"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<entityFramework>
