--- a/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
+++ b/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202102061330267_Initial.designer.cs">
       <DependentUpon>202102061330267_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102061405336_Initial1.cs" />
+    <Compile Include="Migrations\202102061405336_Initial1.designer.cs">
+      <DependentUpon>202102061405336_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -72,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202102061330267_Initial.resx">
       <DependentUpon>202102061330267_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102061405336_Initial1.resx">
+      <DependentUpon>202102061405336_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
