--- a/Gyman/Gyman.PresentationLayer/packages.config
+++ b/Gyman/Gyman.PresentationLayer/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="6.1.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
