--- a/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
+++ b/Gyman/Gyman.BusinessLogicLayer/Gyman.BusinessLogicLayer.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LookupItem.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subscription.cs" />
