--- a/Gyman/Gyman.PresentationLayer/packages.config
+++ b/Gyman/Gyman.PresentationLayer/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="6.1.0" targetFramework="net472" />
+  <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="MahApps.Metro" version="2.4.4" targetFramework="net472" />
+  <package id="MahApps.Metro.IconPacks.Material" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
