--- a/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
+++ b/Gyman/Gyman.DataAccessLayer/Gyman.DataAccessLayer.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202102061405336_Initial1.designer.cs">
       <DependentUpon>202102061405336_Initial1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103141628195_ChangeTrainerModel.cs" />
+    <Compile Include="Migrations\202103141628195_ChangeTrainerModel.designer.cs">
+      <DependentUpon>202103141628195_ChangeTrainerModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -79,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102061405336_Initial1.resx">
       <DependentUpon>202102061405336_Initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103141628195_ChangeTrainerModel.resx">
+      <DependentUpon>202103141628195_ChangeTrainerModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
