--- a/Gyman/Gyman.PresentationLayer/App.config
+++ b/Gyman/Gyman.PresentationLayer/App.config
@@ -4,7 +4,7 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="GymanDb" connectionString="Data Source=DESKTOP-6PHH8U0\SQLEXPRESS;Initial Catalog=Gyman;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="GymanDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Gyman;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
