--- a/Gyman/Gyman.PresentationLayer/Gyman.PresentationLayer.csproj
+++ b/Gyman/Gyman.PresentationLayer/Gyman.PresentationLayer.csproj
@@ -120,9 +120,11 @@
     <Compile Include="Data\Repositories\IMemberRepository.cs" />
     <Compile Include="Data\Repositories\ISubscriptionRepository.cs" />
     <Compile Include="Data\Repositories\ITrainerRepository.cs" />
+    <Compile Include="Data\Repositories\ITrainingRepository.cs" />
     <Compile Include="Data\Repositories\MemberRepository.cs" />
     <Compile Include="Data\Repositories\SubscriptionRepository.cs" />
     <Compile Include="Data\Repositories\TrainerRepository.cs" />
+    <Compile Include="Data\Repositories\TrainingRepository.cs" />
     <Compile Include="Data\Services\IMemberLookupDataService.cs" />
     <Compile Include="Data\Services\ISubscriptionLookupDataService.cs" />
     <Compile Include="Data\Services\ITrainerLookupDataService.cs" />
@@ -138,6 +140,7 @@
     <Compile Include="Startup\Bootstrapper.cs" />
     <Compile Include="ViewModels\ISubscriptionDetailViewModel.cs" />
     <Compile Include="ViewModels\ITrainersViewModel.cs" />
+    <Compile Include="ViewModels\ITrainingDetailViewModel.cs" />
     <Compile Include="ViewModels\SubscriptionDetailViewModel.cs" />
     <Compile Include="ViewModels\TabViewModelBase.cs" />
     <Compile Include="ViewModels\IMemberDetailViewModel.cs" />
@@ -152,6 +155,7 @@
     <Compile Include="ViewModels\NavigationViewModel.cs" />
     <Compile Include="ViewModels\TrainerDetailViewModel.cs" />
     <Compile Include="ViewModels\TrainersViewModel.cs" />
+    <Compile Include="ViewModels\TrainingDetailViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
