--- a/Gyman/Gyman.PresentationLayer/packages.config
+++ b/Gyman/Gyman.PresentationLayer/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="6.1.0" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.Material" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
